# telegram-gifts-catalogue

./: README.md  RU.README.md  UK.README.md  UZ.README.md  data.json  index.html  pyproject.toml
.github/workflows/: generate.yml
src/: collector.py
web/: index.html  ru.index.html  style.css  uk.index.html  uz.index.html
